syntax = "proto3";

package money_transfer.user_service;
option go_package = "github.com/bqdanh/money_transfer";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/rpc/error_details.proto";

import "protoc-gen-swagger/options/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      put: "/api/user/v1/create-user",
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/user/v1/login",
      body: "*"
    };
  }
}


message CreateUserRequest {
  string username = 1 [(validate.rules).string = {min_len: 6, max_len: 16}];
  string password = 2 [(validate.rules).string = {min_len: 1, max_len: 30}];
  string full_name = 3 [(validate.rules).string = {min_len: 1, max_len: 255}];
  string phone = 4;
}

message CreateUserResponse {
  int32 code = 1;
  string message = 2;
  message Data {
    int64 user_id = 1;
  }
  Data data = 3;
}

message LoginRequest {
  string username = 1 [(validate.rules).string = {min_len: 6, max_len: 16}];
  string password = 2 [(validate.rules).string = {min_len: 1, max_len: 30}];
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  message Data {
    string token = 1;
    int64 user_id = 2;
  }
  Data data = 3;
}